--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p><strong> Exp. Graduation : </strong> June 2022 </p>
                         <br/>
                         <p><strong> Contact : </strong></p>
-                        <p><strong> E-mail : </strong> aksharpatel0710@gmail.com </p>
+                        <p><strong> E-mail : </strong> patel.akshar246@gmail.com </p>
                         <p><strong> Phone : </strong> (+1) 682-561-9260 </p>
                         <br/>
                         <a href="assets/Resume/Resume.pdf" class="button" download="Akshar_Resume">Download CV</a>
