--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                         </a>
                     </div>
                     <div class="work__img">
-                        <a href="https://github.com/aksharpatel123/Exceptional-Supercomputers">
+                        <a href="https://github.com/aksharpatel123/Company-RDBMS-Employee-Management-System-">
                         <img src="assets/img/work6.jpg" alt="">
-                        <h4 style="color:navy;"> Exc. Supercomputers (C++)</h4>
+                        <h4 style="color:navy;"> Company RDBMS (MySQL, Python)</h4>
                         </a>
                     </div>
                 </div>
